# learn_Qt

./: README.md
01_basic/: 01_note.md
02_qt5_develop_example/: README.md
03_code_example/01_helloWorld/: 01_helloWorld.pro  main.cpp  mainwindow.cpp
03_code_example/02_mainWindow/: 02_mainWindow.pro  mainwindow.cpp
03_code_example/03_resource/: 03_resource.pro  image.qrc  mainwindow.cpp
03_code_example/04_moveWindow/: 04_moveWindow.pro  mainwindow.cpp  mainwindow.h
03_code_example/05_mulwindow/: 05_mulwindow.pro  mainwindow.cpp  mainwindow.h
03_code_example/06_background/: 06_background.pro  mainwindow.cpp
03_code_example/07_button/: 07_button.pro  mainwindow.cpp  mainwindow.h
03_code_example/08_label/: 08_label.pro  mainwindow.cpp
03_code_example/09_lineEdit/: 09_lineEdit.pro  mainwindow.cpp  mainwindow.h
03_code_example/10_textEdit/: 10_textEdit.pro  mainwindow.cpp
03_code_example/11_plainTextEdit/: 11_plainTextEdit.pro  mainwindow.cpp  mainwindow.h
03_code_example/12_combobox/: 12_combobox.pro  mainwindow.cpp  mainwindow.h
03_code_example/13_fontCombobox/: 13_fontCombobox.pro  mainwindow.cpp  mainwindow.h
03_code_example/14_spinbox/: 14_spinbox.pro  mainwindow.cpp  mainwindow.h
03_code_example/15_timeEdit/: 15_timeEdit.pro  mainwindow.cpp  mainwindow.h
03_code_example/16_dateEdit/: 16_dateEdit.pro  mainwindow.cpp  mainwindow.h
03_code_example/17_scrollBar/: 17_scrollBar.pro  mainwindow.cpp  mainwindow.h
03_code_example/18_radioButton/: 18_radioButton.pro  mainwindow.cpp  mainwindow.h
03_code_example/19_checkbox/: 19_checkbox.pro  mainwindow.cpp  mainwindow.h
04_official_example/media_player/: CMakeLists.txt  chrono_time.h  common.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.cpp  serial.h
(+220 files in other folders)
